Alteração do Layout das Views/Utilizadores. Alterado o onDelete: ReferentialAction para noAction da tabela Candidaturas

--- a/EmpregoInfo/EmpregoInfo/Views/Utilizadores/Edit.cshtml
+++ b/EmpregoInfo/EmpregoInfo/Views/Utilizadores/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EmpregoInfo.Models.Utilizadores
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Editar Utilizador";
 }
 
 <!DOCTYPE html>
