--- a/EmpregoInfo/EmpregoInfo/Views/Utilizadores/Index.cshtml
+++ b/EmpregoInfo/EmpregoInfo/Views/Utilizadores/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<EmpregoInfo.Models.Utilizadores>
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Utilizadores";
 }
 
 <!DOCTYPE html>
