--- a/EmpregoInfo/EmpregoInfo/Views/Utilizadores/Details.cshtml
+++ b/EmpregoInfo/EmpregoInfo/Views/Utilizadores/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EmpregoInfo.Models.Utilizadores
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Alterar Utilizador";
 }
 
 <!DOCTYPE html>
